Bug 1127763 - Some database might be missing the favicons guid index. r=mak