toolkit/components/places/Database.cpp
@@ -751,6 +751,13 @@ Database::InitSchema(bool* aDatabaseMigrated)
 
       // Firefox 39 uses schema version 28.
 
+      if (currentSchemaVersion < 29) {
+        rv = MigrateV29Up();
+        NS_ENSURE_SUCCESS(rv, rv);
+      }
+
+      // Firefox 41 uses schema version 29.
+
       // Schema Upgrades must add migration code here.
 
       rv = UpdateBookmarkRootTitles();
@@ -822,6 +829,8 @@ Database::InitSchema(bool* aDatabaseMigrated)
 
     // moz_favicons.
     rv = mMainConn->ExecuteSimpleSQL(CREATE_MOZ_FAVICONS);
+    NS_ENSURE_SUCCESS(rv, rv);
+    rv = mMainConn->ExecuteSimpleSQL(CREATE_IDX_MOZ_FAVICONS_GUID);
     NS_ENSURE_SUCCESS(rv, rv);
 
     // moz_anno_attributes.
@@ -1604,6 +1613,16 @@ Database::MigrateV28Up() {
   return NS_OK;
 }
 
+nsresult
+Database::MigrateV29Up() {
+  MOZ_ASSERT(NS_IsMainThread());
+
+  nsresult rv = mMainConn->ExecuteSimpleSQL(CREATE_IDX_MOZ_FAVICONS_GUID);
+  NS_ENSURE_SUCCESS(rv, rv);
+
+  return NS_OK;
+}
+
 void
 Database::Shutdown()
 {
@@ -1638,7 +1657,7 @@ Database::Observe(nsISupports *aSubject,
                   const char16_t *aData)
 {
   MOZ_ASSERT(NS_IsMainThread());
- 
+
   if (strcmp(aTopic, TOPIC_PROFILE_CHANGE_TEARDOWN) == 0) {
     // Tests simulating shutdown may cause multiple notifications.
     if (mShuttingDown) {
